--- a/HelpKitchenProject/pom.xml
+++ b/HelpKitchenProject/pom.xml
@@ -37,5 +37,10 @@
 		    <artifactId>activation</artifactId>
 		    <version>1.1</version>
 		</dependency>
+		<dependency>
+			<groupId>servlets.com</groupId>
+			<artifactId>cos</artifactId>
+			<version>05Nov2002</version>
+		</dependency> 
 	</dependencies>
 </project>
